[UPGRADE] Jetty (Spark) 9.4.31.v20200723 -> 9.4.46.v20220331
The following vulnerabilities are fixed with an upgrade:
- https://security.snyk.io/vuln/SNYK-JAVA-ORGECLIPSEJETTY-1047304
- https://security.snyk.io/vuln/SNYK-JAVA-ORGECLIPSEJETTY-1313686
- https://security.snyk.io/vuln/SNYK-JAVA-ORGECLIPSEJETTY-1021614
- https://security.snyk.io/vuln/SNYK-JAVA-ORGECLIPSEJETTY-1090340
- https://security.snyk.io/vuln/SNYK-JAVA-ORGECLIPSEJETTY-1080611

--- a/pom.xml
+++ b/pom.xml
@@ -652,6 +652,7 @@
         <scala.version>${scala.base}.7</scala.version>
         <scalatestplus-play.version>5.0.0</scalatestplus-play.version>
         <doclint>none</doclint>
+        <jetty.version>9.4.46.v20220331</jetty.version>
     </properties>
 
     <dependencyManagement>
@@ -2195,6 +2196,24 @@
                 <groupId>com.sparkjava</groupId>
                 <artifactId>spark-core</artifactId>
                 <version>2.9.3</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.eclipse.jetty</groupId>
+                        <artifactId>jetty-server</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.eclipse.jetty</groupId>
+                        <artifactId>jetty-webapp</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.eclipse.jetty.websocket</groupId>
+                        <artifactId>websocket-server</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.eclipse.jetty.websocket</groupId>
+                        <artifactId>websocket-servlet</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>com.sun.activation</groupId>
@@ -2647,6 +2666,28 @@
                 <artifactId>bcprov-jdk15on</artifactId>
                 <version>${bouncycastle.version}</version>
             </dependency>
+            <!-- JETTY DEPENDENCIES -->
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-server</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-webapp</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty.websocket</groupId>
+                <artifactId>websocket-server</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty.websocket</groupId>
+                <artifactId>websocket-servlet</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>java-hamcrest</artifactId>
